PROJECT(cr3)
cmake_minimum_required(VERSION 2.6)

if (NOT DEFINED GUI)
  message("GUI type is not specified!")
  message("Using ${GUI} as default")
  message("Add cmake parameter -D GUI={QT|WX|CRGUI_XCB|CRGUI_NANOX|CRGUI_JINKE_PLUGIN|CRGUI_WIN32} to use another GUI frontend")
  SET(GUI, QT)
else ()
  message("Using GUI frontend ${GUI}")
endif (NOT DEFINED GUI)

FIND_PATH(FT_INCLUDE_PATH freetype/freetype.h
 /usr/include/freetype2
 /usr/local/include/freetype2
 )
include_directories(crengine/include)
include_directories(tinydict)
include_directories(${FT_INCLUDE_PATH})

ADD_SUBDIRECTORY(tinydict)

if ( WIN32 )
  ADD_DEFINITIONS( -DWIN32=1 -D_WIN32=1 )
else()
  ADD_DEFINITIONS( -DLINUX=1 -D_LINUX=1 )
endif( WIN32 )

SET (CRGUI_DEFS -DCOLOR_BACKBUFFER=0 -DLDOM_USE_OWN_MEM_MAN=1 )
SET (DESKTOP_DEFS -DCOLOR_BACKBUFFER=1 -DLDOM_USE_OWN_MEM_MAN=1 )

if ( ${GUI} STREQUAL CRGUI_XCB )
  message("Making CR3GUI for XCB")
  ADD_DEFINITIONS( -DCR_USE_XCB=1 ${CRGUI_DEFS} )
  ADD_SUBDIRECTORY(crengine)
  ADD_SUBDIRECTORY(cr3gui)
elseif ( ${GUI} STREQUAL CRGUI_NANOX )
  message("Making CR3GUI for NanoX")
  ADD_DEFINITIONS( -DWITH_JINKE=1 -DCR_USE_JINKE=1 ${CRGUI_DEFS} )
  ADD_SUBDIRECTORY(crengine)
  ADD_SUBDIRECTORY(cr3gui)
elseif ( ${GUI} STREQUAL CRGUI_JINKE_PLUGIN )
  message("Making CR3GUI plugin for Jinke Viewer")
  ADD_DEFINITIONS( -DWITH_JINKE=1 -DWITH_JINKE_APP=1 -DCR_USE_JINKE=1 ${CRGUI_DEFS} )
  ADD_SUBDIRECTORY(crengine)
  ADD_SUBDIRECTORY(cr3gui)
elseif ( ${GUI} STREQUAL CRGUI_WIN32 )
  message("Making CR3GUI for Win32")
  ADD_DEFINITIONS( ${CRGUI_DEFS} )
  ADD_SUBDIRECTORY(crengine)
  ADD_SUBDIRECTORY(cr3gui)
elseif ( ${GUI} STREQUAL QT )
  message("Making CR3/QT")
  ADD_DEFINITIONS( ${DESKTOP_DEFS} )
  ADD_SUBDIRECTORY(crengine)
  ADD_SUBDIRECTORY(cr3qt)
elseif ( ${GUI} STREQUAL "WX" )
  message("Making CR3/WX")
  ADD_DEFINITIONS( ${DESKTOP_DEFS} )
  ADD_SUBDIRECTORY(crengine)
  ADD_SUBDIRECTORY(cr3wx)
else ( ${GUI} STREQUAL CRGUI_XCB )
  message("Unknown GUI type ${GUI}")
endif ( ${GUI} STREQUAL CRGUI_XCB )
